@@ -80,6 +80,12 @@ debhelper (11.3) UNRELEASED; urgency=medium
     release.
   * Dh_Lib.pm: Correct control parser to permit zero or more leading
     space after the "Section" field (instead of "exactly one" space).
+  * python_distutils.pm: Deprecate the python-distutils build system
+    and mark it as removed in compat 12.  Users are recommeded to
+    migrate to the third-party build system called "pybuild".  This
+    deprecation implies that python3 (among other) will not be
+    supported in the python-distutils build system.
+    (Closes: #568033, #597105, #597342, #769840, #813686, #898347)
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
